Back to a buildable state